<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:fillViewport="true"
        tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">


        <TextView
                android:id="@+id/textResultTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/titleApplication"
                style="@style/TextViewTitleTheme"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/textLabelWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                style="@style/TextViewLabelTheme"
                android:text="@string/inputYourWeight"
                app:layout_constraintTop_toBottomOf="@+id/textResultTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />
        <EditText
                android:id="@+id/textInputWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:hint="Seu Peso (Kg)"
                android:textAlignment="center"
                android:background="@drawable/bg_edit_text"
                android:textColorHint="@color/colorSecondaryDefault"
                android:textStyle="bold"
                android:inputType="numberDecimal"
                app:backgroundTint="@null"
                android:textColor="@color/colorSecondaryDefault"
                app:layout_constraintTop_toBottomOf="@+id/textLabelWeight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <com.google.android.material.slider.Slider
                android:id="@+id/sliderWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:valueFrom="100"
                android:valueTo="300"
                android:stepSize="10"
                app:trackHeight="20dp"
                app:thumbRadius="18dp"
                app:trackColorActive="@color/colorButton"
                app:layout_constraintTop_toBottomOf="@+id/textInputHeight"
               />


        <TextView
                android:id="@+id/textLabelHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                style="@style/TextViewLabelTheme"
                android:text="@string/inputYourHeight"
                app:layout_constraintTop_toBottomOf="@+id/textInputWeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        <EditText
                android:id="@+id/textInputHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:hint="Sua altura (cm)"
                android:textColor="@color/colorSecondaryDefault"
                android:textAlignment="center"
                android:background="@drawable/bg_edit_text"
                android:textColorHint="@color/colorSecondaryDefault"
                android:textStyle="bold"
                android:inputType="number"
                android:maxLength="4"
                app:backgroundTint="@null"
                app:layout_constraintTop_toBottomOf="@+id/textLabelHeight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="1dp"
                app:layout_constraintBottom_toTopOf="@+id/sliderWeight"/>

        <Button
                android:id="@+id/buttonCalculateImc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:padding="20dp"
                style="@style/TextViewLabelTheme"
                android:text="@string/calculate"
                android:background="@drawable/bg_button"
                app:backgroundTint="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sliderWeight"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>